tests/lexer/valid/test_nested_comments.src
// Тест 16: Вложенные комментарии
/* внешний
   /* внутренний */
   еще текст */
int x = 42;
/* /* вложенный */ комментарий */