tests/lexer/invalid/03_unterminated_comment.src
// Незакрытый комментарий
int x = 42;
/* этот комментарий
   никогда не закрывается
int y = 99;